Add homepage files

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yunbo Shi - Personal Homepage</title>
+    <title>Yunbao Shi - Personal Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Yunbo Shi's Personal Homepage</h1>
+        <h1>Welcome to Yunbao Shi's Personal Homepage</h1>
     </header>
     <nav>
         <ul>
@@ -20,7 +20,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Yunbo Shi. I'm passionate about interdisciplinary studies involving logic, language, and computation. My current focus is on natural language logic and combinatory categorial grammar (CCG).</p>
+            <p>Hi, I'm Yunbao Shi. I'm passionate about interdisciplinary studies involving logic, language, and computation. My current focus is on natural language logic and combinatory categorial grammar (CCG).</p>
         </section>
         <section id="research">
             <h2>Research Interests</h2>
