--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
     <footer>
         <section id="contact">
-            <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>Contact: <a href="mailto:your-email@example.com">shiyunbao@xtu.edu.cn</a></p>
         </section>
     </footer>
 </body>
