Add homepage files

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Yunbao Shi. I'm passionate about interdisciplinary studies involving logic, language, and computation. My current focus is on natural language logic and combinatory categorial grammar (CCG).</p>
+            <p>Hi, I'm Yunbao Shi. I'm passionate about interdisciplinary studies involving logic, language, and computation. My current focus is on Modern type theory and its applications.</p>
         </section>
         <section id="research">
             <h2>Research Interests</h2>
             <p>I am particularly interested in the interdisciplinary study of logic, language, and computation, with a focus on natural language processing and computational linguistics.</p>
+        </section>
+        <section id="Publications">
+            <h2>Publications</h2>
+            <p>Haixia Man, Manyi Wan, Yunbao Shi, Peng Chen. 2022. Parsing Chinese with Combinatory Categorial Grammar: A Linguistic and Computational Study. Complexity. Vol. 2022. (SCI).</p>
         </section>
     </main>
     <footer>
