Add homepage files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section id="Publications">
             <h2>Publications</h2>
-            <p>Haixia Man, Manyi Wan, Yunbao Shi, Peng Chen. 2022. Parsing Chinese with Combinatory Categorial Grammar: A Linguistic and Computational Study. Complexity. Vol. 2022. (SCI).</p>
+            <p>[1] Haixia Man, Manyi Wan, Yunbao Shi, Peng Chen. 2022. Parsing Chinese with Combinatory Categorial Grammar: A Linguistic and Computational Study. Complexity. Vol. 2022. (SCI).</p>
         </section>
     </main>
     <footer>
