Add homepage files

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         </section>
         <section id="research">
             <h2>Research Interests</h2>
-            <p>I am particularly interested in the interdisciplinary study of logic, language, and computation, with a focus on natural language processing and computational linguistics.</p>
+            <p>I am particularly interested in ...</p>
         </section>
         <section id="Publications">
             <h2>Publications</h2>
-            <p>[1] Haixia Man, Manyi Wan, Yunbao Shi, Peng Chen. 2022. Parsing Chinese with Combinatory Categorial Grammar: A Linguistic and Computational Study. Complexity. Vol. 2022. (SCI).</p>
+            <p>[1] .</p>
+            <p>[2] ..</p>
+            <p>[3] ...</p>
         </section>
     </main>
     <footer>
