Add homepage files

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <p>[2] ..</p>
             <p>[3] ...</p>
         </section>
+        <section id="conference information">
+            <h2>Conference information</h2>
+            <p>Logic, Language and...</p>
+        </section>
     </main>
     <footer>
         <section id="contact">
