Add homepage files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <img src="images/Profile.jpg" alt="Yunbo Shi's Profile Picture" width="200">
+            <img src="images/yunbao.jpg" alt="Yunbo Shi's Profile Picture" width="200">
             <p>Hi, I'm Yunbao Shi. I'm passionate about interdisciplinary studies involving logic, language, and computation. My current focus is on Modern type theory and its applications.</p>
         </section>
         <section id="research">
