Add homepage files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yunbao Shi - Personal Homepage</title>
     <link rel="stylesheet" href="style.css">
+    img.center-image {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 </head>
 <body>
     <header>
