--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yunbao Shi - Personal Homepage</title>
     <link rel="stylesheet" href="style.css">
-    img.center-image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    <style>
+        img.center-image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
     <header>
