Add homepage files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <footer>
         <section id="contact">
-            <p>Contact: <a href="mailto:your-email@example.com">shiyunbao@xtu.edu.cn</a></p>
+            <p>Contact: <a href="mailto:your-email@example.com">yunbao.shi@rhul.ac.uk</a></p>
         </section>
     </footer>
 </body>
